@@ -1,4 +1,5 @@
 current:
+  * add iPhone zoom support, integrate with crop
   * add iPhone OS 4.0 video capture support
     - replacement view controller for new camera reader
     - separate view for use without controller
